# ha-nightscout-v3

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-test.txt  ruff.toml
.github/workflows/: ci.yml
brands/: README.md
custom_components/nightscout_v3/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  feature_registry.py  history_store.py  icons.json  manifest.json  models.py  quality_scale.yaml  sensor.py  statistics.py  strings.json
dashboards/: nightscout.yaml  quarterly_review.yaml
dashboards/examples/: agp_card.yaml  bg_card.yaml  kpi_gauges.yaml  loop_card.yaml  text_report.yaml  tir_donut.yaml
docs/: architecture.md  dashboard-setup.md  roadmap.md
docs/plans/: 2026-04-22-ha-nightscout-v3-plan.md
docs/references/: ha-reference-integrations.md  ha-silver-quality-scale.md  nightscout-v3-api.md
docs/reviews/: 2026-04-22-final-release-review-pass2.md  2026-04-22-final-release-review.md  2026-04-22-phase-1-api.md  2026-04-22-phase-2-domain.md  2026-04-22-phase-3-ha-integration.md  2026-04-22-phase-4-scripts.md  2026-04-22-phase-5-dashboard.md  2026-04-22-phase-6-docs.md  2026-04-22-silver-audit-pass2.md  2026-04-22-silver-audit.md
docs/specs/: 2026-04-22-ha-nightscout-v3-design.md
scripts/: __init__.py  anonymize_fixtures.py  capture_fixtures.py  smoke_test.py  verify_silver.py
tests/: conftest.py  test_auth.py  test_capabilities.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_exceptions.py  test_feature_registry.py  test_history_store.py  test_init.py  test_sensor.py  test_statistics.py
tests/dashboards/: test_examples.py  test_yaml_shape.py
tests/docs/: test_architecture.py  test_contributing.py  test_dashboard_setup.py  test_readme.py  test_roadmap.py
tests/fixtures/: auth_request_success.json  devicestatus_latest.json  entries_latest.json  lastmodified.json  profile_latest.json  status.json  treatments_sensor_change.json
tests/scripts/: test_anonymize_fixtures.py  test_capture_fixtures.py  test_smoke_test.py  test_verify_silver.py
(+7 files in other folders)
