[project]
name = "nightscout_v3"
version = "0.1.0"
description = "Home Assistant custom integration for Nightscout v3 (AAPS closed loop)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "nightscout_v3 contributors" }]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_components.nightscout_v3", "custom_components.nightscout_v3.api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=custom_components.nightscout_v3 --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["custom_components.nightscout_v3"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
