[project]
name = "nightscout_v3"
version = "0.1.0"
description = "Home Assistant custom integration for Nightscout v3 (AAPS closed loop)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "savek-cc" }]
dependencies = ["aiosqlite==0.20.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_components.nightscout_v3", "custom_components.nightscout_v3.api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=custom_components.nightscout_v3 --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["custom_components.nightscout_v3"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.mypy]
python_version = "3.14"
strict = true
# HA and some of our runtime deps don't ship type stubs. Silence the
# "cannot find implementation" noise without relaxing any of the
# actual correctness checks.
ignore_missing_imports = true
# Tests use AsyncMock / MagicMock aggressively; enforce strict typing
# on production code only.
exclude = ["tests/", "build/"]
